--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -26,7 +26,7 @@
       <span class="spacer"></span> 
       <a routerLink="/role-dashboard">Role Dashboard </a>
       <a routerLink="/vacancy-dashboard">Vacancy Dashboard </a>
-      <span *ngIf="myUserId!=-1">
+      <span *ngIf="myUserId!=-1 && myUserId!=0">
         <a routerLink="/user/{{myUserId}}"> My User Profile</a>
       </span>
       <span *ngIf="myCompanyId!=-1">
