--- a/jobMarket/src/app/vacancy-details/vacancy-details.component.css
+++ b/jobMarket/src/app/vacancy-details/vacancy-details.component.css
@@ -10,8 +10,12 @@
 button{
     margin-left: auto;
     margin-right: auto;
-    text-align: center
+    text-align: center;
+    position: relative;
+}
 
+#buttons{
+    text-align: center
 }
 
 #skillTable td{
