--- a/jobMarket/src/app/company/company.component.html
+++ b/jobMarket/src/app/company/company.component.html
@@ -10,10 +10,11 @@
     <tr>{{vacancy.salary}}</tr>
     <tr>{{vacancy.postTime}} | {{vacancy.uploadYear}}</tr>
     <tr><a href="{{vacancy.link}}">View site</a></tr>
-    <span *ngIf="vacancy.description != 'POSITION NOW FILLED.'">
-        <tr><button class="optionButtons" mat-raised-button (click)="setFilled(vacancy.vacancyId)">Filled</button>
+    
+        <tr><span *ngIf="vacancy.description != 'POSITION NOW FILLED.'">
+            <button class="optionButtons" mat-raised-button (click)="setFilled(vacancy.vacancyId)">Filled</button>
+        </span>
             <button class="optionButtons" mat-raised-button (click)="setDeleted(vacancy.vacancyId)">Delete</button></tr>
-    </span>
 </td></table>
 </span>
 </div>
