--- a/jobMarket/src/app/userlogin/userlogin.component.html
+++ b/jobMarket/src/app/userlogin/userlogin.component.html
@@ -6,7 +6,7 @@
                 </tr> 
                 <tr>
                     <th>Password:</th>
-                    <td><input [(ngModel)]="password" name="password"></td>
+                    <td><input [(ngModel)]="password" type="password" name="password"></td>
                 </tr>
                 <tr>
                     <button (click)="logInUser()" value="login">Login</button>
