--- a/jobMarket/src/app/company-login/company-login.component.html
+++ b/jobMarket/src/app/company-login/company-login.component.html
@@ -3,7 +3,7 @@
 </mat-form-field>&nbsp;&nbsp; 
 <br> 
 <mat-form-field class="example-full-width">
-        <input matInput [(ngModel)]="companyPassword" placeholder="Password"  name="companyPassword" [ngModelOptions]="{standalone: true}" >
+        <input matInput [(ngModel)]="companyPassword" placeholder="Password"  name="companyPassword" [ngModelOptions]="{standalone: true}" type="password">
 </mat-form-field>&nbsp;&nbsp; 
 <hr> 
 <button mat-raised-button color="accent" (click)="companyLogIn()">Log In</button>
