--- a/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
+++ b/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
@@ -1,5 +1,5 @@
 <br>
-<span *ngIf="myCompanyId!=-1 || myUserId==0">
+<span *ngIf="myUserId==0">
 <button class="crudButton" mat-raised-button (click)="openAddVacancy()">Add New Vacancy</button>
 <button class="crudButton" mat-raised-button (click)="openEditVacancy()">Edit Vacancy</button>
 </span>
