--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -52,10 +52,10 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Rank Change</th>
         <td mat-cell *matCellDef="let row">
           <ng-container *ngIf="row.rankChange<0">
-              {{row.rankChange}} <i class="large material-icons icon-red">call_received</i>
+              {{row.rankChange}} <i class="large material-icons icon-red">arrow_downward</i>
           </ng-container>
           <ng-container *ngIf="row.rankChange>0">
-              +{{row.rankChange}} <i class="large material-icons icon-green">call_made</i>
+              +{{row.rankChange}} <i class="large material-icons icon-green">arrow_upward</i>
           </ng-container>
           <ng-container *ngIf="row.rankChange==0">
               {{row.rankChange}}  <mat-icon>arrow_forward</mat-icon>
