--- a/jobMarket/src/app/app.component.html
+++ b/jobMarket/src/app/app.component.html
@@ -1,9 +1,6 @@
-<app-nav-bar [class.theme-alternate]="otherTheme"> 
-  
+<app-nav-bar [class.theme-alternate]="otherTheme">
 <div >
   <router-outlet></router-outlet>
-  <button (click)="changeTheme()" mat-raised-button>Change Theme</button>
+  <!-- <button (click)="changeTheme()" mat-raised-button>Change Theme</button> -->
 </div>
-
-
 </app-nav-bar>
