--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -27,14 +27,19 @@
       <span class="spacer"></span> 
       <a routerLink="/role-dashboard">Role</a>
       <a routerLink="/vacancy-dashboard">Vacancy</a>
-      <span *ngIf="myUserId!=-1 && myUserId!=0">
-        <button mat-button routerLink="/user/{{myUserId}}"><mat-icon>account_circle</mat-icon></button>
-      </span>
-      <span *ngIf="myCompanyId!=-1">
-          <button mat-button routerLink="/company/{{myCompanyId}}"><mat-icon>account_circle</mat-icon></button>
-        </span>
-      <button mat-button (click)="logOut()" routerLink="/"><mat-icon>power_settings_new</mat-icon></button>
       
+      <!-- <button mat-button (click)="logOut()" routerLink="/"><mat-icon>power_settings_new</mat-icon></button> -->
+      <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
+        <mat-menu #menu="matMenu">
+          <span *ngIf="myUserId!=-1 && myUserId!=0">
+            <button mat-menu-item routerLink="/user/{{myUserId}}"><mat-icon>account_circle</mat-icon>User Details</button>
+          </span>
+          <span *ngIf="myCompanyId!=-1">
+              <button mat-menu-item routerLink="/company/{{myCompanyId}}"><mat-icon>account_circle</mat-icon>User Details</button>
+          </span>
+          <button mat-menu-item (click)="changeTheme()"><mat-icon>brightness_6</mat-icon>Change Theme</button>
+          <button mat-menu-item (click)="logOut()"><mat-icon>power_settings_new</mat-icon>Log Out</button>
+        </mat-menu>
     </mat-toolbar>
     <ng-content> 
     </ng-content>
