--- a/jobMarket/src/app/app.component.html
+++ b/jobMarket/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar [class.theme-alternate]="otherTheme">
+<app-nav-bar [class.theme-alternate]="dark">
 <div >
   <router-outlet></router-outlet>
   <!-- <button (click)="changeTheme()" mat-raised-button>Change Theme</button> -->
