--- a/jobMarket/src/app/company/company.component.css
+++ b/jobMarket/src/app/company/company.component.css
@@ -32,7 +32,8 @@ img{
     margin-left: auto;
     margin-right: auto;
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+    text-align: justify
 }
 
 .vacancyTable{
