--- a/jobMarket/src/app/welcome/welcome.component.html
+++ b/jobMarket/src/app/welcome/welcome.component.html
@@ -12,7 +12,7 @@
 <div color="primary" class="front-button"> 
     <button mat-raised-button (click)="openUser()">User</button><br><br>  
     <button mat-raised-button (click)="openCompany()">Company</button><br><br>  
-    <button mat-raised-button (click)="logInAsAdmin()">Admin</button>
+    <button mat-raised-button (click)="openAsAdmin()">Admin</button>
 </div>
 </span>
 <span *ngIf="myUserId==-1 && myCompanyId!=-1">
