added email for registering company

--- a/jobMarket/src/app/register/register.component.css
+++ b/jobMarket/src/app/register/register.component.css
@@ -1,7 +1,10 @@
-#registerTable{
-    text-align:center
+.registerTable {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.example-full-width {
-    width: 100%;
-  }
+button {
+    text-align: center;
+}
