--- a/jobMarket/src/app/userlogin/userlogin.component.css
+++ b/jobMarket/src/app/userlogin/userlogin.component.css
@@ -1,4 +1,7 @@
-
-.example-full-width {
-    width: 100%;
-  }
+.userLogin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  
+}
