--- a/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.css
+++ b/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.css
@@ -1,3 +1,12 @@
 .crudButton {
     margin-left: 15px;
 }
+
+#back{
+    background-image: url("https://conversionxl.com/wp-content/uploads/2018/09/coding-language.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
+    color: white;
+    text-align: center;
+}
