--- a/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
+++ b/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
@@ -1,4 +1,8 @@
-<br>
+<div id="back">
+    <br>
+    <h2>Vacancy Dashboard</h2>
+    <br>
+</div>
 <span *ngIf="myCompanyId!=-1 || myUserId==0">
 <button class="crudButton" mat-raised-button (click)="openAddVacancy()">Add New Vacancy</button>
 <button class="crudButton" mat-raised-button (click)="openEditVacancy()">Edit Vacancy</button>
