--- a/jobMarket/src/app/vacancy-details/vacancy-details.component.css
+++ b/jobMarket/src/app/vacancy-details/vacancy-details.component.css
@@ -4,7 +4,7 @@
     padding: 10 10 10 10;
     margin-left: auto;
     margin-right: auto;
-    text-align: center
+    text-align: justify;
 }
 
 button{
