--- a/jobMarket/src/app/vacancy-details/vacancy-details.component.html
+++ b/jobMarket/src/app/vacancy-details/vacancy-details.component.html
@@ -2,11 +2,23 @@
 <h3>{{vacancy.thisCompany.companyName}}</h3>
 <span *ngIf="vacancy.thisCompany.companyId==myCompanyId"><h5>(My Vacancy)</h5></span>
 <h4>{{vacancy.location}} | £{{vacancy.salary}}/annum</h4>
-<h5><a href="{{link}}">Apply Here</a></h5>
+<span *ngIf="vacancy.description!='POSITION NOW FILLED.'">
+    <h5><a href="{{link}}">Apply Here</a></h5>
+</span>
+<span *ngIf="vacancy.description=='POSITION NOW FILLED.'">
+        <h5><mat-icon>warning</mat-icon></h5>
+</span>
 <table id="skillTable"><td *ngFor="let skill of vacancy.vacancySkills">{{skill.skill}}</td></table>
 <div id="buttons">
-<span *ngIf="myUserId!=-1 && myUserId!=0 && !saved"><button mat-raised-button (click)="saveVacancyToUser(vacancy.vacancyId)"><mat-icon>favorite_border</mat-icon></button></span>
-<span *ngIf="myUserId!=-1 && myUserId!=0 && saved"><button mat-raised-button (click)="saveVacancyToUser(vacancy.vacancyId)"><mat-icon>favorite</mat-icon></button></span>
+<span *ngIf="myUserId!=-1 && myUserId!=0">
+    <span *ngIf="!saved"><button mat-raised-button (click)="saveVacancyToUser(vacancy.vacancyId)">
+        <mat-icon>favorite_border</mat-icon></button>
+    </span>
+    
+<span *ngIf="saved"><button mat-raised-button disabled>
+    <mat-icon>favorite</mat-icon></button>
+</span>
+</span>
 </div>
 <div id="description"><p>{{vacancy.description}}</p></div>
 <p>{{vacancy.uploadYear}} | {{vacancy.postTime}}</p>
