--- a/jobMarket/src/app/company/company.component.html
+++ b/jobMarket/src/app/company/company.component.html
@@ -1,7 +1,14 @@
-<h1>{{companyName}}</h1>
+<div id="back">
+    <br>
+    <h2 style="text-align: center">Your Profile</h2>
+    <h4>Hello {{companyName}}</h4>
+    <br>
+</div>
+<br>
 <h3>{{hqLocation}}</h3>
 <a href="{{linkedIn}}"><img id="linkedIn" src="https://www.shareicon.net/data/512x512/2015/09/23/106002_logo_512x512.png"></a>
-<h2>My Listed Vacancies</h2>
+<hr>
+<h2>My Current Vacancies</h2>
 <div class="flex-container">
 <span *ngFor="let vacancy of companyVacancies">
 <table class="vacancyTable"><td>
