--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -1,6 +1,8 @@
-<!-- <h2>Role Dashboard</h2> -->
-<!-- <input type="text" placeholder="Search" [(ngModel)]="searchText" autocomplete="off"> -->
-<br> 
+<div id="back">
+    <br>
+    <h2>Role Dashboard</h2>
+    <br>
+</div>
 <span *ngIf="myUserId==0">
 <button mat-raised-button (click)="openAddRole()" class="crudButton">Add New Role</button>
 <button mat-raised-button (click)="openEditRole()" class="crudButton"> Edit Roles</button>
