--- a/jobMarket/src/app/company/company.component.html
+++ b/jobMarket/src/app/company/company.component.html
@@ -1,7 +1,16 @@
-<h1>{{companyName}}</h1>
-<h3>{{hqLocation}}</h3>
-<a href="{{linkedIn}}"><img id="linkedIn" src="https://www.shareicon.net/data/512x512/2015/09/23/106002_logo_512x512.png"></a>
+<br>
+<div class="center"> 
+    <h1>{{companyName}}</h1>
+    <h3>{{hqLocation}}</h3>
+    <a href="{{linkedIn}}"><img id="linkedIn" src="https://www.shareicon.net/data/512x512/2015/09/23/106002_logo_512x512.png"></a>
+    <br>
+    <button mat-raised-button (click)="editCompany()">Edit</button>
+</div>
+
+<hr>
+
 <h2>My Listed Vacancies</h2>
+
 <div class="flex-container">
 <span *ngFor="let vacancy of companyVacancies">
 <table class="vacancyTable"><td>
@@ -12,9 +21,9 @@
     <tr><a href="{{vacancy.link}}">View site</a></tr>
     
         <tr><span *ngIf="vacancy.description != 'POSITION NOW FILLED.'">
-            <button class="optionButtons" mat-raised-button (click)="setFilled(vacancy.vacancyId)">Filled</button>
+            <button class="optionButtons" mat-raised-button (click)="setFilled(vacancy.vacancyId)" color="accent">Filled</button>&nbsp;
         </span>
-            <button class="optionButtons" mat-raised-button (click)="setDeleted(vacancy.vacancyId)">Delete</button></tr>
+            <button class="optionButtons" mat-raised-button (click)="setDeleted(vacancy.vacancyId)" color="warn">Delete</button></tr>
 </td></table>
 </span>
 </div>
